--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://test-yt:U4P2tr4S5ecXK93j@cluster0.x1pemt7.mongodb.net/startupBenefits
-JWT_SECRET=your_jwt_secret
 PORT=5000
+MONGO_URI=mongodb://127.0.0.1:27017/startup_benefits
+JWT_SECRET=supersecretkey
